welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:2: error: not found: value setColeurBrosse
  setColeurBrosse(c)
  ^Array2:9: error: not found: value getHauteurMonde
  var hauteurMonde:Int = getHauteurMonde()
                         ^Array2:10: error: not found: value getLargeurMonde
  var largeurMonde:Int = getLargeurMonde()
                         ^