welcome.lessons.welcome.array.basics.Array2.scala.code
def peindreSol(c: Color) {
  setColeurBrosse(c)
  
  baisseBrosse()
  leveBrosse()
}

override def run() {
  var hauteurMonde:Int = getHauteurMonde()
  var largeurMonde:Int = getLargeurMonde()
  
  var couleurs = new Array[Color](hauteurMonde)
  
  // On commence par lire les couleurs des cases.
}